--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset='utf-8' />
-      <title>🏢Brooklyn CD 6 Land Use Map</title>
+      <title>Washington Heights Land Use Map</title>
       <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
       <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
       <link href='css/styles.css' rel='stylesheet' />
@@ -10,8 +10,8 @@
   <body>
     <!-- the sidebar is fixed width and will contain a title, some text, and buttons -->
     <div id='sidebar'>
-      <h3>🏢 Brooklyn Community District 6 Land Use Map</h3>
-      <p>This map shows MapPLUTO data for the community district color-coded by land use code.</p>
+      <h3>Washington Heights Land Use Map </h3>
+      <p>This map shows MapPLUTO data for Washington Heights color-coded by land use code.</p>
 
       <div id='feature-info'>
       </div>
