--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- the sidebar is fixed width and will contain a title, some text, and buttons -->
     <div id='sidebar'>
       <h3>Washington Heights Land Use Map </h3>
-      <p>This map shows MapPLUTO data for Washington Heights color-coded by land use code.</p>
+      <p>This map shows MapPLUTO data for Washington Heights properties by the year that they were built.</p>
 
       <div id='feature-info'>
       </div>
